# BackendFinanSee

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/controllers/: auth.py  categories.py  expenses.py  periods.py  users.py
src/core/: config.py
src/models/: __init__.py  base.py  categories.py  expense_category_link.py  expenses.py  periods.py  users.py
src/schemas/: auth.py  categories.py  expenses.py  periods.py  users.py
src/services/: categories.py  emails.py  expenses.py  periods.py  reports.py  users.py
src/templates/: report.html
src/templates/email/: password_reset.html  welcome.html
src/utils/: database.py  password.py  security.py  validators.py
tests/: conftest.py
tests/integration/: test_auth_reset.py  test_categories.py  test_expenses.py  test_periods.py  test_reports.py  test_users.py
