[project]
name = "banckendfinansee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
