[project]
name = "banckendfinansee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "jinja2>=3.1.6",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "9.0"
addopts = []
testpaths = ["tests"]


[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]

ignore = ["E501", "D203", "D213"]

[tool.ruff.lint.extend-per-file-ignores]
"migrations/*" = ["D", "E501"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.mypy]
python_version = "3.12"
exclude = ["migrations/", "tests/"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
